# miniswift

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  debug_detailed.cpp  debug_interpolation.cpp  debug_parser.swift  debug_parsing.cpp  debug_print_test.swift  debug_processor.swift  debug_property.swift  debug_simple.swift  debug_struct.swift  debug_struct_method.swift  debug_test.swift  interactive_demo.sh  minimal_test  simple_test  simple_test.swift  test_access_control_parsing.swift  test_addchild.swift  test_advanced.swift  test_async_param.swift  test_async_simple.swift  test_async_struct.swift  test_comprehensive_interpolation.swift  test_enum_advanced.swift  test_enum_simple.swift  test_error_recovery.sh  test_labeled_call.swift  test_lexer.cpp  test_main.swift  test_memory  test_mixed_params.swift  test_modifier_chain.swift  test_news_fetch.swift  test_output2.txt  test_output3.txt  test_override.swift  test_playground.sh  (+9 more)
.cache/clangd/index/: AST.h.88348E9982406D20.idx  AstPrinter.cpp.9041FFBB09055318.idx  AstPrinter.h.7BF229E3C8FA4ED7.idx  Environment.cpp.B9A1420C1E7A7105.idx  Environment.h.48616A2E9397139E.idx  Interpreter.cpp.E0A607196BE17678.idx  Interpreter.h.FAFEAF14B25733BC.idx  Lexer.cpp.FAD76AEE140E1EBD.idx  Lexer.h.EBE42E68D9E10605.idx  Parser.cpp.3820A697F1021103.idx  Parser.h.7DF2A814887E11B7.idx  (+6 more)
SwiftSource/: delete.txt
doc/: ACCESS_CONTROL.md  ACCESS_CONTROL_IMPLEMENTATION_PLAN.md  ADVANCED_IMPROVEMENTS.md  Advanced_Operators.md  Attribute.md  Automatic_Reference_Counting.md  CODE_QUALITY_SUGGESTIONS.md  COMPILATION_FLOW_ANALYSIS.md  CONCURRENCY_FEATURES.md  CONCURRENCY_IMPLEMENTATION.md  CONTROL_FLOW_GUIDE.md  Concurrency.md  Debug_UI.md  ERROR_HANDLING_IMPLEMENTATION.md  ESCAPE_CHARACTERS_GUIDE.md  Error_Handling.md  Generics.md  IO_NETWORK_INTEGRATION_COMPLETE.md  IO_Network_Framework_README.md  JIT_EXAMPLE.md  Macros.md  Memory_Safety.md  Nested_Types.md  OOP_ENHANCEMENT_PLAN.md  OPTINAL.md  Opaque_and_Boxed.md  Protocols.md  README_SEMANTIC.md  STRING_INTERPOLATION_EXECUTION_FLOW.md  SUBSCRIPT_IMPLEMENTATION.md  SUBSCRIPT_TEST_REPORT.md  SUPER_EXECUTION_FLOW.md  SYNTAX_GUIDE.md  SwiftSource_Code_Analysis.md  SwiftSource_Implementation_Details.md  SwiftSource_深度代码分析报告.md  Type_Casting.md  UI_API_EXTENSION_GUIDE.md  UI_API_IMPLEMENTATION_EXAMPLE.md  UI_COMPATIBILITY_GUIDE.md  (+16 more)
examples/: BasicUITest.swift  ButtonTest.swift  DebugTest.swift  MinimalTest.swift  SimpleButtonTest.swift  SimpleTest.swift  SimpleUIApp.swift  SimpleUIExample.swift  UIAPIProofOfConcept.swift  UIExample.swift  UIExample_Fixed.swift  UIExtensionDemo.swift  WorkingUIApp.swift  debug_tokens.swift  generic_simple_test.swift  protocol_test.swift  simple_inout_test.swift  simple_test.swift  step_by_step_test.swift
miniswift/: Package.swift  UI_README.md
scripts/: build_ui_extension.sh  build_windows.bat  build_windows.ps1  build_with_llvm20.sh
src/: jit_debug_stubs.cpp  main.cpp
src/codegen/: LLVMCodeGenerator.cpp  LLVMCodeGenerator.h
src/interpreter/: CMakeLists.txt  Environment.cpp  Environment.h  ErrorHandling.cpp  ErrorHandling.h  IONetworkIntegration.cpp  IONetworkIntegration.h  IONetworkTest.cpp  IO_NETWORK_IMPLEMENTATION_SUMMARY.md  Interpreter.cpp  Interpreter.h  PlatformTest.cpp  Value.cpp  Value.h
src/interpreter/Concurrency/: ConcurrencyRuntime.cpp  ConcurrencyRuntime.h
src/interpreter/IO/: IORuntime.cpp  IORuntime.h
src/interpreter/Memory/: ARC.cpp  ARC.h  MemoryExample.cpp  MemoryManager.cpp  MemoryManager.h  MemorySafety.cpp  MemorySafety.h  README.md
src/interpreter/Network/: NetworkRuntime.cpp  NetworkRuntime.h
src/interpreter/OOP/: Constructor.cpp  Constructor.h  Inheritance.cpp  Inheritance.h  Method.cpp  Method.h  MethodInterpreter.cpp  MethodInterpreter.h  Optional.cpp  Optional.h  Property.cpp  Property.h  Subscript.cpp  Subscript.h
src/lexer/: Lexer.cpp  Lexer.h  Token.h
src/parser/: AST.h  AccessControl.cpp  AccessControl.h  AstPrinter.cpp  AstPrinter.h  ErrorNodes.cpp  ErrorNodes.h  ExprNodes.h  GenericNodes.h  Parameter.h  Parser.cpp  Parser.h  StmtNodes.h
src/runtime/: CMakeLists.txt  runtime_interface.cpp  runtime_interface.h
src/semantic/: ConcurrencySemanticAnalyzer.cpp  ConcurrencySemanticAnalyzer.h  ConcurrencyTypeSystem.cpp  ConcurrencyTypeSystem.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SymbolTable.cpp  SymbolTable.h  TypeSystem.cpp  TypeSystem.h  TypedAST.cpp  TypedAST.h
src/ui/: ButtonWidget.cpp  ButtonWidget.h  GTK4Backend.cpp  GTK4Backend.h  HStackWidget.cpp  HStackWidget.h  README.md  TGUIBackend.cpp  TGUIBackend.h  TextWidget.cpp  TextWidget.h  UIIntegration.cpp  UIIntegration.h  UIRuntime.cpp  UIRuntime.h  UITest.cpp  VStackWidget.cpp  VStackWidget.h
tests/: ASYNC_CONCURRENCY_TEST_REPORT.md  FontSystemTest.swift  MEMORY_TESTS_README.md  MinimalGTK4Test.cpp  MinimalTGUITest.cpp  NEW_FEATURES_TEST_README.md  SimpleFontTest.swift  SimpleUIAppTest.cpp  access_control_basic_test.swift  advanced_control_flow_test.swift  advanced_features_test.swift  array_literal_test.swift  array_test.swift  baidu_web_test.swift  basic_complex_test.swift  basic_error_test.swift  basic_memory_test.swift  basic_new_features_test.swift  basic_object_test.swift  basic_safe_test.swift  basic_switch_error_test.swift  build_ui_test.sh  closure_test.swift  collection_memory_test.swift  compilation_test.swift  complex_comprehensive_test.swift  comprehensive_control_flow_test.swift  comprehensive_multi_print_test.swift  comprehensive_test.swift  comprehensive_type_test.swift  concurrency_enhanced_test.swift  concurrency_example.swift  control_flow_test.swift  custom_operator_test.swift  debug_class.swift  debug_closure.swift  debug_complex_interpolation.cpp  debug_detailed.cpp  debug_dict_only.swift  debug_dict_test.swift  (+187 more)
tests/examples/: simple_protocol_test.swift
tests/examples_generic/: advanced_operators_test.swift  debug_test.swift  generics_test.swift  inout_test.swift
tests/marco_examples/: comprehensive_macro_test.swift  concurrency_test.cpp  macro_test.swift
third/: dependencies.md
third/zstd/: CMakeLists.txt
(+30 files in other folders)
